--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World I have no idea what I'm doing</h1>
-<img src="Assets/TrafficChart.png" alt="hi" class="inline"/>
+<img src="Assets/TrafficChart.PNG" alt="hi" class="inline"/>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
