--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <body>
 <h1>Hello World I have no idea what I'm doing</h1>
+<select name="Filter by School">
+  <option value="engineering">Engineering</option>
+  <option value="business">Business</option>
+  <option value="liberalarts">Liberal Arts</option>
+  <option value="agriculture">Agriculture</option>
+</select>
 <img src="Assets/TrafficChart.PNG" alt="hi" class="inline"/>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
