--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <option value="liberalarts">Liberal Arts</option>
   <option value="agriculture">Agriculture</option>
 </select>
+
+<form action="action_page.php">
+  <select name="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select>
+  <br><br>
+  <input type="submit">
+</form>
+
 <img src="Assets/TrafficChart.PNG" alt="hi" class="inline"/>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
