--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World I have no idea what I'm doing</h1>
+<h1>Senior Design</h1>
 <select name="Filter by School">
   <option value="engineering">Engineering</option>
   <option value="business">Business</option>
@@ -10,6 +10,5 @@
 </select>
 
 <img src="Assets/TrafficChart.PNG" alt="hi" class="inline"/>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
